Fixed clicking on small nav, fix width of small nav, fix automatic resizes

--- a/src/sidebar/Sidebar.scss
+++ b/src/sidebar/Sidebar.scss
@@ -1,5 +1,5 @@
 :root {
-  --sidebar-condensed-width: 80px;
+  --sidebar-condensed-width: 52px;
   --sidebar-opened-width: 15rem;
   --sidebar-width: var(--sidebar-opened-width);
 }
